Add error handling for step 1